# xml_objects

./: .gitignore  README.md  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  index.rst  installing.rst
docs/source/api/: modules.rst  xml_python.rst
examples/flask/: app.xml  flask-builder.py
examples/wx/: frame.xml  requirements.txt  wx-builder.py
tests/: conftest.py  flaskbuilder_test.py  parser_test.py  test_builder.py  wxbuilder_test.py
xml_objects/: __init__.py
xml_objects/ext/: flask.py  wx.py
xml_python/: __init__.py
xml_python/ext/: flask.py  wx.py
