[metadata]
name = xml_python
description = A library for making Python objects from XML.
description-file = README.md
description-content-type = text/markdown
home-page = https://xml_python.readthedocs.io/
author = Chris Norman
author-email = chris.norman2@googlemail.com
license = MPL

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
spellcheck-targets=comments

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
